# prego3

./: .gitignore  .ian  MANIFEST.in  Makefile  README.md  README.rst  bitbucket-pipelines.yml  config.spec  pyproject.toml  setup.py  tox.ini  version.py
.github/workflows/: prego-tox.yml  test.yml
debian/: changelog  clean  control  copyright  rules
debian/patches/: paths
debian/source/: lintian-overrides
examples/: command-fail.py  command-ok.py  command-outs.py  conftest.py  dummy-duo-ibool.py  examples.py  fail.py  hello.py  is_google_reachable.py  netcat.py  simple-fail.py
prego/: __init__.py  assertion.py  command.py  console.py  const.py  debian.py  exc.py  gvars.py  item.py  net.py  plugin.py  runner.py  task.py  testcase.py  tools.py
test/: TODO  context_tests.py  dist_test.py  file_tests.py  integration_tests.py  interpolation_tests.py  plugin_debian_tests.py  plugin_tests.py  report_tests.py  unit_tests.py
test/fixtures/: output.py
test/integration/: advices.py  cases.py
test/issues/: issue-1_test.py
test/utils/: log.py
