[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prego"]

[project]
name = "prego3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessings>=1.7",
    "commodity>=0.20220422",
    "configobj>=5.0.9",
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
]

[project.scripts]
prego3 = "prego:run"

[dependency-groups]
dev = [
    "doublex>=1.9.6.1",
]
