[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prego"]

[project]
name = "prego3"
version = "0.20260422"
description = "System test framework based on Python3 test cases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blessed>=1.17",
    "commodity>=0.20260422",
    "configobj>=5.0.9",
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
]

[project.scripts]
prego = "prego:run"

[project.entry-points."pytest11"]
prego = "prego.plugin"

[dependency-groups]
dev = [
    "doublex>=1.9.6.1",
]
